[package]
name = "rust-net-stab"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
serde_yaml = "0.8.21"
tokio = { version = "1.14.0", features = ["full"] }
prometheus = "0.12"
warp = "0.3"
log = "0.4"
simple_logger = "1.11"
sys-info = "0.8"